--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
-    background-color:#a9a9ff
+    background-color:#0080ff
 }
 
 #content-container {
