--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -1,6 +1,6 @@
 body {
     font-family:Arial, Helvetica, sans-serif;
-    background-color:#0080ff
+    background-color:#a9a9ff
 }
 
 #content-container {
@@ -41,6 +41,8 @@ body {
     padding:12px 20px;
     border-radius:5px;
     font-weight:500;
+    width:200px;
+    text-align:center;
 }
 
 #assignments-list li {
