--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -33,7 +33,7 @@ body {
     font-weight:600;
 }
 
-.assignment-link {
+#assignment-link {
     display: inline-block;
     text-decoration:none;
     color:white;
@@ -53,6 +53,6 @@ p {
     color:#555;
 }
 
-.assignment-link:hover {
+#assignment-link:hover {
     color:#0080ff;
 }
