--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -45,6 +45,12 @@ body {
     text-align:center;
 }
 
+#assignments-list {
+    list-style:none;
+    padding:0;
+    text-align:center;
+}
+
 #assignments-list li {
     margin:15px 0;
 }
