--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -9,16 +9,24 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            text-align: center;
         }
         header {
-            flex-direction: column;
             width: 100px;
             margin: auto;
             text-align: center;
             font-size: 24px;
             padding: 10px 0;
             background-color: #ddd;
+        }
+        nav {
+            width: 100%;
+            background-color: #333;
+        }
+        nav ul {
+            display: flex;
+            justify-content: center;
+            list-style: none;
+            padding: 10px;
         }
         nav ul li {
             margin: 0 15px;
@@ -30,7 +38,7 @@
         }
         main {
             display: flex;
-            flex-direction: row;
+            flex-wrap: wrap;
             justify-content: space-between;
             width: 90%;
             margin-top: 20px;
@@ -60,19 +68,14 @@
                 flex-direction: column;
                 align-items: center;
             }
-            nav {
-                flex-direction: row;
-                justify-content: space-around;
-            }
             main {
                 flex-direction: column;
                 align-items: center;
             }
             .content {
-                flex: 2;
+                width: 100%;
             }
             aside {
                 width: 100%;
-                text-align: center;
             }
         }
