--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -30,6 +30,7 @@
         }
         nav ul li {
             margin: 0 15px;
+            list-style-type: none;
         }
         nav ul li a {
             color: white;
@@ -59,7 +60,7 @@
             color: white;
             margin-top: 10px;
         }
-        img {
+        article img {
             display: block;
             margin: 10px auto;
         }
@@ -73,9 +74,18 @@
                 align-items: center;
             }
             .content {
-                width: 100%;
+                flex: 2;
             }
             aside {
                 width: 100%;
+                text-align: center;
+            }
+            .img-right {
+                float: right;
+                margin-left: 15px;
+            }
+            .img-left {
+                float: left;
+                margin-right: 15px;
             }
         }
