--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -9,23 +9,27 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            text-align: center;
         }
         header {
-            width: 100%;
+            width: 100px;
+            margin: auto;
             text-align: center;
             font-size: 12px;
             padding: 10px 0;
         }
+        nav {
+            width: 100%;
+            background-color: #333;
+        }
         nav ul {
-            list-style: none;
-            padding: 10px;
             display: flex;
             justify-content: center;
-            background-color: #333;
+            list-style: none;
+            padding: 10px;
         }
         nav ul li {
             margin: 0 15px;
+            list-style-type: none;
         }
         nav ul li a {
             color: white;
@@ -34,7 +38,7 @@
         }
         main {
             display: flex;
-            flex-direction: column;
+            flex-wrap: wrap;
             justify-content: space-between;
             width: 90%;
             margin-top: 20px;
@@ -55,12 +59,13 @@
             color: white;
             margin-top: 10px;
             display: flex;
-            flex-direction: column;
-            align-items: center;
+        }
+        article img {
+            display: block;
+            margin: 10px auto;
         }
         .titles {
             display: flex;
-            flex-direction: column;
             margin-top: 20px;
         }
         .title-box {
@@ -68,46 +73,21 @@
             padding: 20px;
             margin: 10px 0;
             display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-        .title-box img {
-            width: 200px;
-            height: 50px;
-            margin-bottom: 10px;
         }
         @media (min-width: 768px) {
+            nav ul {
+                flex-direction: column;
+                align-items: center;
+            }
             main {
-                display: flex;
-                flex-direction: row;
+                flex-direction: column;
+                align-items: center;
             }
             .content {
                 flex: 2;
             }
             aside {
-                flex: 1;
-                text-align: center;
-            }
-            .content article:nth-child(odd) img {
-                order: 2;
-                margin-left: 15px;
-            }
-            .content article:nth-child(even) img {
-                order: -1;
-                margin-right: 15px;
-            }
-            .titles-container {
-                display: flex;
-                flex-direction: column;
-                width: 30%;
-            }
-            .title-box {
                 width: 100%;
-            }
-            .links-titles-wrapper {
-                display: flex;
-            }
-            aside {
-                flex: 1;
+                text-align: center;
             }
         }
