--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -76,18 +76,10 @@
         }
         @media (min-width: 768px) {
             nav ul {
-                flex-direction: column;
-                align-items: center;
+                display: flex;
             }
             main {
-                flex-direction: column;
-                align-items: center;
-            }
-            .content {
-                flex: 2;
-            }
-            aside {
-                width: 100%;
-                text-align: center;
+                display: flex;
+           
             }
         }
