--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -22,7 +22,7 @@
             background-color: #333;
         }
         nav ul {
-            display: flex;
+            display: column;
             justify-content: center;
             list-style: none;
             padding: 10px;
@@ -49,7 +49,7 @@
             background-color: #cce7ff;
         }
         aside {
-            flex: 1;
+            flex: 2;
             background-color: #f08080;
             padding: 20px;
         }
