--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -11,7 +11,6 @@
             align-items: center;
         }
         header {
-            width: 100px;
             margin: auto;
             text-align: center;
             font-size: 12px;
@@ -39,12 +38,12 @@
         main {
             display: flex;
             flex-wrap: wrap;
-            justify-content: space-between;
             width: 90%;
             margin-top: 20px;
         }
         .content {
             flex: 3;
+            flex-direction: column;
             padding: 20px;
             background-color: #cce7ff;
         }
