--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -15,50 +15,59 @@ body {
 #main-heading {
     color: #004d80;
     text-align:center;
+    margin:0;
     font-size:32px;
     font-weight:600;
 }
 
 #author-name {
     color:#0080ff;
-    text-align:center;
+    text-align:left;
     font-size:22px;
     font-weight:400;
+    margin-bottom:5px;
 }
 
 #assignments-heading {
     font-size:26px;
     color:#004d80;
-    margin-top:30px;
+    margin-bottom:20px;
     font-weight:600;
 }
 
-.assignment-link {
-    display: inline-block;
-    text-decoration:none;
-    color:white;
+.assignments {
+    display: flex;
+    justify-content:center;
+    gap:20px;
+}
+
+.assignment {
     background-color:#004d80;
-    padding:12px 20px;
+    padding:15px;
+    width:250px;
     border-radius:5px;
-    font-weight:500;
-    width:200px;
     text-align:center;
+    box-shadow:2px 2px 10px rgba(0, 0, 0, 0.1);
 }
 
-#assignments-list {
-    list-style:none;
-    padding:0;
-    text-align:justify;
+.assignment h3 {
+    font-size:16px;
+    margin-bottom:10px;
 }
 
-#assignments-list li {
-    margin:15px 0;
+.assignment img {
+    width:300px;
+    height:150px;
+    border-radius:5px;
 }
 
-p {
-    color:#555;
+.assignment img:hover {
+    background-color:#0080ff;
 }
 
-.assignment-link:hover {
-    color:#0080ff;
+@media(min-width: 900px) {
+    .assignments {
+        flex-direction:column;
+        align-items:center;
+    }
 }
