--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -24,11 +24,13 @@
             display: column;
             justify-content: center;
             list-style: none;
+            text-decoration:none;
             padding: 10px;
         }
         nav ul li {
             margin: 0 15px;
-            list-style-type: none;
+            list-style: none;
+            text-decoration:none;
         }
         nav ul li a {
             color: white;
