--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -78,6 +78,8 @@
         @media (min-width: 768px) {
             nav ul {
                 display: flex;
+                list-style:none;
+                text-decoration:none;
             }
             main {
                 display: flex;
