--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -82,10 +82,10 @@
             width:100%;
         }
         .left-titles-container {
-            width:20%;
+            width:100%;
         }
         .right-titles-container {
-            width:30%;
+            width:100%;
         }
         .titles {
             display: flex;
@@ -108,6 +108,13 @@
             main {
                 display: flex;
                 flex-direction:row;
+            }
+            nav ul {
+                flex-direction:row;
+                justify-content:center;
+            }
+            nav ul li {
+                margin: 0 15px;
             }
             .content {
                 flex:2;
