--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -21,7 +21,8 @@
             background-color: #333;
         }
         nav ul {
-            display: column;
+            display:flex;
+            flex-direction: column;
             justify-content: center;
             list-style: none;
             text-decoration:none;
@@ -35,6 +36,7 @@
         nav ul li a {
             color: white;
             font-size: 18px;
+            text-decoration:none;
         }
         main {
             display: flex;
@@ -110,7 +112,7 @@
                 flex-direction:row;
             }
             nav ul {
-                flex-direction:row;
+                display:row;
                 justify-content:center;
             }
             nav ul li {
