--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -76,6 +76,7 @@
             margin-left:10px;
         }
         .image-left {
+            align-items:left;
             float:left;
             margin-right:10px;
         }
@@ -91,7 +92,6 @@
         }
         .titles {
             display: flex;
-            flex-direction:column;
             align-items:center;
         }
         .title-box {
