--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -41,7 +41,7 @@
         main {
             display: flex;
             flex-wrap: wrap;
-            width: 90%;
+            width: 100%;
             margin-top: 20px;
         }
         .content {
@@ -76,7 +76,6 @@
             margin-left:10px;
         }
         .image-left {
-            align-items:left;
             float:left;
             margin-right:10px;
         }
@@ -92,6 +91,7 @@
         }
         .titles {
             display: flex;
+            flex-direction:column;
             align-items:center;
         }
         .title-box {
@@ -123,7 +123,7 @@
             }
             aside {
                 flex:1;
-                max-width:30%;
+                width:100%;
             }
             .links-titles-wrapper {
                 display:flex;
