--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -112,7 +112,7 @@
                 flex-direction:row;
             }
             nav ul {
-                display:row;
+                flex-direction:column;
                 justify-content:center;
             }
             nav ul li {
