--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -22,7 +22,6 @@
         }
         nav ul {
             display:flex;
-            flex-direction: column;
             justify-content: center;
             list-style: none;
             text-decoration:none;
@@ -113,7 +112,7 @@
             }
             nav ul {
                 flex-direction:column;
-                justify-content:center;
+                align-items:center;
             }
             nav ul li {
                 margin: 0 15px;
