--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -111,8 +111,8 @@
                 flex-direction:row;
             }
             nav ul {
-                flex-direction:column;
-                align-items:center;
+                flex-direction:row;
+                justify-content:center;
             }
             nav ul li {
                 margin: 0 15px;
