--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -22,6 +22,7 @@
         }
         nav ul {
             display:flex;
+            flex-direction:column;
             justify-content: center;
             list-style: none;
             text-decoration:none;
