re edited pagelayout.html

--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -67,6 +67,10 @@
             margin-top: 10px;
             display: flex;
         }
+        .article-content {
+            display:flex;
+            flex-direction:column;
+        }
         article img {
             display: block;
             margin: 10px auto;
