--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -65,6 +65,7 @@
             color: white;
             margin-top: 10px;
             display: flex;
+            flex-wrap:wrap;
         }
         .article-content {
             display:flex;
@@ -84,6 +85,7 @@
         }
         .links-titles-wrapper {
             display:flex;
+            flex-wrap:wrap;
         }
         .titles {
             display: flex;
