--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -87,10 +87,6 @@
             display:flex;
             justify-content:center;
         }
-        .left-titles-container,.right-titles-container {
-            display:flex;
-            justify-content:center;
-        }
         .titles {
             display: flex;
             flex-direction:column;
@@ -133,14 +129,14 @@
                 display:flex;
                 justify-content:center;
             }
-            .left-titles-container,.right-titles-container {
+            .left-titles-container {
                 display: grid;
                 grid-template-columns:repeat(2, 1fr);
             }
         }
         @media(min-width:900px) {
             .left-titles-container {
-                grid-template-columns:repeat(2,1fr);
+                grid-template-columns:repeat(2,1fr)
             }
             .right-titles-container {
                 grid-template-columns:repeat(3,1fr);
