--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -69,7 +69,6 @@
         .article-content {
             display:flex;
             flex-direction:column;
-            flex:1;
         }
         article img {
             display: block;
@@ -90,6 +89,7 @@
         .titles {
             display: flex;
             flex-direction:column;
+            align-items:center;
         }
         .titles-container {
             display:flex;
@@ -123,6 +123,10 @@
             }
             aside {
                 flex:1;
+            }
+            .links-titles-wrapper {
+                display:flex;
+                justify-content:center;
             }
             .titles-container {
                 display: grid;
