--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -124,6 +124,9 @@
             aside {
                 flex:1;
             }
+            .links-titles-wrapper {
+                display:flex;
+            }
             .titles-container {
                 display: grid;
                 grid-template-columns:repeat(2, 1fr);
