--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -43,6 +43,7 @@
             margin-top: 20px;
         }
         .content {
+            display:flex;
             flex-direction: column;
             padding: 20px;
             background-color: #cce7ff;
@@ -83,6 +84,7 @@
         }
         .links-titles-wrapper {
             display:flex;
+            flex-direction:column;
         }
         .titles {
             display: flex;
