re edited styles

--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -107,8 +107,7 @@
         }
         @media (min-width: 768px) {
             main {
-                display: flex;
-                flex-direction:row;
+                flex-direction:column;
             }
             nav ul {
                 flex-direction:row;
