re edited styles

--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -107,7 +107,7 @@
         }
         @media (min-width: 768px) {
             main {
-                flex-direction:column;
+                display:flex;
             }
             nav ul {
                 flex-direction:row;
