--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -110,7 +110,7 @@
                 display:flex;
             }
             nav ul {
-                flex-direction:row;
+                flex-direction:column;
                 justify-content:center;
             }
             nav ul li {
