re edited styles

--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -107,10 +107,10 @@
         }
         @media (min-width: 768px) {
             main {
-                display:flex;
+                flex-direction:row;
             }
             nav ul {
-                flex-direction:column;
+                flex-direction:row;
                 justify-content:center;
             }
             nav ul li {
