--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -65,6 +65,7 @@ article {
     color: white;
     margin-top: 10px;
     display: flex;
+    flex-wrap:wrap;
 }
 .article-content {
     display:flex;
@@ -84,6 +85,7 @@ article img {
 }
 .links-titles-wrapper {
     display:flex;
+    flex-wrap:wrap;
 }
 .titles {
     display: flex;
@@ -133,6 +135,6 @@ article img {
 }
 @media(min-width:900px) {
     .titles-container {
-        grid-template-columns:repeat(2,1fr);
+        grid-template-columns:repeat(3,1fr);
     }
 }
