re edited styles

--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -95,6 +95,7 @@ article img {
 .titles-container {
     display:flex;
     flex-direction:column;
+    justify-content:center;
 }
 .title-box {
     background-color: #ffcc66;
