--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -39,7 +39,6 @@ body {
 
 .assignments {
     display: flex;
-    flex-wrap:wrap;
     justify-content:center;
     gap:20px;
 }
@@ -67,6 +66,7 @@ body {
     font-size:16px;
     margin-bottom:10px;
     color:#0080ff;
+    text-decoration:none;
 }
 
 .assignment img {
