--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -56,6 +56,7 @@ body {
     background-color:#004d80;
     padding:15px;
     width:300px;
+    text-decoration:none;
     border-radius:5px;
     text-align:center;
     box-shadow:2px 2px 10px rgba(0, 0, 0, 0.1);
@@ -66,6 +67,7 @@ body {
     font-size:16px;
     margin-bottom:10px;
     color:#0080ff;
+    list-style:none;
     text-decoration:none;
 }
 
