--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -87,11 +87,11 @@ body {
     .assignments {
         flex-direction:column;
         align-items:center;
+        text-decoration:none;
     }
 
     .assignment {
-        width:90%;
         max-width:300px;
-        height:250px;
+        text-decoration:none;
     }
 }
