--- a/csce242/styles.css
+++ b/csce242/styles.css
@@ -40,14 +40,13 @@ body {
 .assignments {
     display: flex;
     justify-content:center;
+    text-decoration:none;
     gap:20px;
 }
 
 .assignment a {
     display:block;
     text-decoration:none;
-    list-style:none;
-    color:inherit;
     width:100%;
     height:100%;
 }
@@ -67,7 +66,6 @@ body {
     font-size:16px;
     margin-bottom:10px;
     color:#0080ff;
-    list-style:none;
     text-decoration:none;
 }
 
