--- a/csce242/assignments/assignment03/styles.css
+++ b/csce242/assignments/assignment03/styles.css
@@ -78,10 +78,12 @@ article img {
 .image-right {
     order:1;
     margin-left:10px;
+    width:100%;
 }
 .image-left {
     order:-1;
     margin-right:10px;
+    width:100%;
 }
 .links-titles-wrapper {
     display:flex;
